--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -10,6 +10,33 @@
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.69) 0%, rgba(0, 0, 0, 0) 100%);
         z-index: 10;
     }
+
+    &__menu {
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+        align-items: center;
+
+        &-buttons {
+            align-items: center;
+        }
+
+        &-button {
+            font-weight: 500;
+
+            &_aqua {
+                padding: 0.5rem 2rem;
+                border-radius: 0.75rem;
+                color: #fff;
+                margin-left: 1rem;
+                background: $aqua;
+            }
+        }
+    }
+}
+
+#navbar-header {
+    margin-left: 2rem;
 }
 
 // The sticky class is added to the navbar with JS when it reaches its scroll position
@@ -22,7 +49,6 @@
 /* * Toggle Navigation * */
 nav {
     display: flex;
-    justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
     z-index: 10;
@@ -51,8 +77,6 @@ nav {
 }
 
 #navbar-header {
-    margin: auto 0;
-    order: 3;
 
     &>ul {
         width: 100%;
@@ -61,6 +85,7 @@ nav {
         justify-content: space-between;
         padding: 0;
         margin: 0;
+        align-items: center;
 
         &>li {
             flex: auto;
@@ -78,29 +103,18 @@ nav {
                 transition: all 0.2s ease-in-out;
             }
 
-            &.active {
-                .nav-link {
-                    color: #000;
-                }
-
-                &:after {
-                    background: red;
-                    transition: all 0.2s ease-in-out;
-                }
-            }
-
             .nav-link {
-                font-weight: 400;
-                color: red;
+                font-weight: 500;
+                color: #000;
             }
 
             &:hover {
                 &::after {
-                    background: red;
+                    background: $aqua;
                 }
 
                 .nav-link {
-                    color: #000;
+                    color: $aqua;
                 }
             }
 
