FIX: styles header, reg;

--- a/assets/scss/_account.scss
+++ b/assets/scss/_account.scss
@@ -57,7 +57,7 @@
         transition: all 0.1s ease-in-out;
 
         &:focus {
-            border-width: 3px;
+            background: #ededed;
         }
     }
 
