--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,1 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+@font-face {
+    font-family: "tapdelivery";
+    src:url("assets/fonts/tapdelivery/tapdelivery.eot");
+    src:url("assets/fonts/tapdelivery/tapdelivery.eot?#iefix") format("embedded-opentype"),
+      url("assets/fonts/tapdelivery/tapdelivery.woff") format("woff"),
+      url("assets/fonts/tapdelivery/tapdelivery.ttf") format("truetype"),
+      url("assets/fonts/tapdelivery/tapdelivery.svg#tapdelivery") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  
+  }
+  
+  [data-icon]:before {
+    font-family: "tapdelivery" !important;
+    content: attr(data-icon);
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  [class^="icon-"]:before,
+  [class*=" icon-"]:before {
+    font-family: "tapdelivery" !important;
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-bars:before {
+    content: "\61";
+  }
+  .icon-cross:before {
+    content: "\62";
+  }
+  
