--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -23,6 +23,7 @@
 
         &-button {
             font-weight: 500;
+            display: initial !important;
 
             &_aqua {
                 padding: 0.5rem 2rem;
@@ -67,7 +68,6 @@ nav {
 
     #toggle-nav {
         display: none;
-        order: 2;
 
         i {
             font-size: 2em;
@@ -126,6 +126,10 @@ nav {
     .navbar {
         padding: 1rem;
 
+        nav {
+            justify-content: space-between;
+        }
+
         #toggle-nav {
             display: flex;
             padding: 1rem;
@@ -136,9 +140,16 @@ nav {
         }
     }
 
-    #navbar-header {
+    .header__menu {
         display: none;
+        flex: 0 0 100%;
+        flex-direction: column;
+    }
+
+    #navbar-header {
         width: 100%;
+        margin-left: 0;
+        margin-bottom: 1rem;
 
         a {
             font-size: 1.5rem;
@@ -158,9 +169,26 @@ nav {
         }
     }
 
+    .header__menu {
+        &-buttons {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-button {
+            padding: 0.5rem 4rem;
+            font-size: 1.5rem;
+        }
+    }
+
+    .signin-btn {
+        margin-left: 0;
+        margin-top: 1rem;
+    }
+
     .navbar__brand {
         max-width: 150px;
-        margin-top: 0.5em;
     }
 }
 
