--- a/assets/scss/_account.scss
+++ b/assets/scss/_account.scss
@@ -13,24 +13,43 @@
         flex-direction: column;
         width: 50%;
         margin: auto;
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
     }
 
     nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        background: #00C3CC;
-        padding: 1.5rem 0;
-        margin-bottom: 1.5rem;
 
         ul {
-            margin: 0;
-            padding: 0;
+
             display: flex;
+            flex-direction: row;
+            justify-content: center;
+            background: $aqua;
+            padding: 1.5rem 0;
+            margin: 0 0 1.5rem;
             list-style: none;
+            width: 100%;
+
+            @media (max-width: 768px) {
+                overflow-x: auto;
+                justify-content: flex-start;
+                padding: 1rem 0.5rem;
+                align-items: center;
+            }
 
             li {
                 padding: 0 2rem;
+
+                @media (max-width: 768px) {
+                    padding: 0 2.5rem 0 0;
+                    text-align: center;
+
+                    &:last-child {
+                        padding: 0;
+                    }
+                }
 
                 a {
                     color: #fff;
@@ -110,6 +129,9 @@
 }
 
 .form-block {
+    @media (max-width: 768px) {
+        padding: 0 0.5rem;
+    }
 
     br {
         display: none;
