--- a/assets/scss/_social.scss
+++ b/assets/scss/_social.scss
@@ -41,6 +41,10 @@
         opacity: 0;
         transition: all 0.2s ease-in-out;
 
+        @media (max-width: 768px) {
+            width: 50%;
+        }
+
         &_opened {
             opacity: 1;
             bottom: 2rem;
