--- a/style.css
+++ b/style.css
@@ -1347,7 +1347,13 @@ nav {
   margin: auto;
 }
 
-.woocommerce nav {
+@media (max-width: 768px) {
+  .woocommerce-MyAccount-content {
+    width: 100%;
+  }
+}
+
+.woocommerce nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1360,20 +1366,36 @@ nav {
           justify-content: center;
   background: #00C3CC;
   padding: 1.5rem 0;
-  margin-bottom: 1.5rem;
+  margin: 0 0 1.5rem;
+  list-style: none;
+  width: 100%;
 }
 
-.woocommerce nav ul {
-  margin: 0;
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
+@media (max-width: 768px) {
+  .woocommerce nav ul {
+    overflow-x: auto;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding: 1rem 0.5rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .woocommerce nav ul li {
   padding: 0 2rem;
+}
+
+@media (max-width: 768px) {
+  .woocommerce nav ul li {
+    padding: 0 2.5rem 0 0;
+    text-align: center;
+  }
+  .woocommerce nav ul li:last-child {
+    padding: 0;
+  }
 }
 
 .woocommerce nav ul li a {
@@ -1467,6 +1489,12 @@ nav {
   color: #000;
   font-style: italic;
   font-size: 0.75rem;
+}
+
+@media (max-width: 768px) {
+  .form-block {
+    padding: 0 0.5rem;
+  }
 }
 
 .form-block br {
@@ -1745,6 +1773,12 @@ nav {
   opacity: 0;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .social-block {
+    width: 50%;
+  }
 }
 
 .social-block_opened {
