--- a/assets/scss/_modals.scss
+++ b/assets/scss/_modals.scss
@@ -8,6 +8,10 @@
 
     &-srcont {
         overflow-y: hidden;
+
+        @media (max-width: 768px) {
+            overflow-y: auto;
+        }
     }
 
     &-sidebar {
@@ -20,6 +24,10 @@
         @media (max-width: 768px) {
             max-width: 100% !important;
             max-height: 75%;
+        }
+
+        @media (min-width:768px) and (max-width:1024px) {
+            max-width: 60% !important;
         }
     }
 
@@ -63,7 +71,7 @@
 }
 
 .xoo-aff-input-group .xoo-aff-input-icon {
-    background-color: #fff;
+    background-color: #f5f6fa;
     color: $aqua;
     border: 1px solid $aqua;
     border-radius: 0.75rem 0 0 0.75rem;
@@ -78,6 +86,11 @@
     border: 1px solid $aqua;
     border-left: 0;
     border-radius: 0 0.75rem 0.75rem 0;
+    background: #f5f6fa;
+
+    &:focus {
+        background: #fff;
+    }
 }
 
 .xoo_el_reg_terms_cont {
