--- a/assets/scss/_social.scss
+++ b/assets/scss/_social.scss
@@ -42,7 +42,11 @@
         transition: all 0.2s ease-in-out;
 
         @media (max-width: 768px) {
-            width: 50%;
+            width: 52%;
+        }
+
+        @media (min-width:768px) and (max-width:1024px) {
+            width: 25%;
         }
 
         &_opened {
